--- a/MIST143_Traveler/Views/ProductPage/Index.cshtml
+++ b/MIST143_Traveler/Views/ProductPage/Index.cshtml
@@ -228,7 +228,7 @@
 
 
             <div class="活動DIV">
-                <h2><span class="一條根"> </span><span>活動評價</span></h2>
+                <h2><span class="一條根"> </span><span>活動評價</span></h2> @*i love apple*@
             </div>
 
             <div class="評論">
