--- a/MIST143_Traveler/Views/ProductPage/Index.cshtml
+++ b/MIST143_Traveler/Views/ProductPage/Index.cshtml
@@ -232,7 +232,7 @@
             </div>
 
             <div class="評論">
-                <div class="card mb-3" style="max-width: 850px;">@*sdsdf12222222sdf*@
+                <div class="card mb-3" style="max-width: 850px;">@*jjjjjjjjjjj*@
                     <div class="row g-0">
 
                         <div class="col-md-1">
