--- a/MIST143_Traveler/Views/CustomerCenter/CustomerInfo.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/CustomerInfo.cshtml
@@ -84,12 +84,18 @@
 </div>
 
 <script>
-
     const send = document.querySelector("#send");
     send.addEventListener("click", () => {
         alert("您的變更已儲存")
     })
+   
 
 
 </script>
 
+@section Scripts{ 
+<script>
+
+</script>
+
+}
