--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 
             <form class="header-search">
                 <div class="header-search-box">
-                    <button type="button" onclick="location.href='@Url.Action("ProductListHomePage", "ProductListPage")'"> 
+                    <button type="button" onclick="location.href='@Url.Action("ProductListHomePage", "ProductListPage")'">
                         <span class="bi-search"></span>
                     </button>
                     <input type="search"
@@ -164,7 +164,10 @@
     </footer>
 
     <!-- 結束 -->
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+            crossorigin="anonymous"></script>
+    @*<script src="~/lib/jquery/dist/jquery.min.js"></script>*@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/jquery.unobtrusive-ajax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/&#64;popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -177,9 +180,6 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
           media="screen" />
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
-            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-            crossorigin="anonymous"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
