--- a/MIST143_Traveler/Views/CustomerCenter/LoginModal.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/LoginModal.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model MIST143_Traveler.Models.Member
+@{
     ViewData["Title"] = "LoginModal";
     Layout = null;
     
@@ -7,16 +8,20 @@
 
 
 
-<form method="post">
+@using (Html.BeginForm())
+{
+
     <h1>歡迎</h1>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">使用者帳號</label>
-        <input type="text" class="form-control" id="Actemail" placeholder="name@example.com">
+       @* <input type="text" class="form-control" id="Actemail" placeholder="name@example.com">*@
+        @Html.TextBox("Email", "", new { @class = "form-control", id = "Actemail", placeholder = "name@example.com" })
         <small id="sm" class="form-text text-muted"></small>
     </div>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">使用者密碼</label>
-        <input type="password" class="form-control" id="Pas" placeholder="password">
+       @* <input type="password" class="form-control" id="Pas" placeholder="password">*@
+        @Html.TextBox("Password", "", new { @class = "form-control",id="Pas", placeholder = "password",type= "password" })
     </div>
     <div class="modal-footer mx-auto">
         <div style="margin-right:150px;">
@@ -34,7 +39,7 @@
         <a href="@Url.Content("~/CustomerCenter/Forgetpas")" class="btn-outline-dark">忘記密碼?</a>
 
     </div>
-</form>
+}
 @section Scripts {
     <script>
         //const login = document.querySelector("#btnlogin");
@@ -48,8 +53,8 @@
         const DemoValue = () => {
          let act = document.querySelector("#Actemail");
         let pas = document.querySelector("#Pas");
-        act.value = "mi@123.com";
-        pas.value = 12345678;
+        act.value = "d555@gmail.com";
+        pas.value = "a1234567";
         
     }
 
